@@ -38,6 +38,7 @@
     <influxdb-client-java.version>7.1.0</influxdb-client-java.version>
     <flux-dsl.version>7.1.0</flux-dsl.version>
     <org.eclipse.paho.client.mqttv3.version>1.2.5</org.eclipse.paho.client.mqttv3.version>
+    <testcontainers.version>1.20.0</testcontainers.version>
   </properties>
 
   <dependencyManagement>
@@ -105,9 +106,27 @@
 
       <!-- TESTING -->
       <dependency>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-junit5</artifactId>
+        <version>${quarkus.platform.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-junit5-mockito</artifactId>
+        <version>${quarkus.platform.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>org.instancio</groupId>
         <artifactId>instancio-junit</artifactId>
         <version>${instancio-junit}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>hivemq</artifactId>
+        <version>${testcontainers.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
@@ -153,6 +172,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${surefire-plugin.version}</version>
           <configuration>
+            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
             <systemPropertyVariables>
               <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
               <maven.home>${maven.home}</maven.home>
